[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/pickup/lever.png" type="Texture" id=1]
[ext_resource path="res://scenes/pickup/Button_and_Door.gd" type="Script" id=2]
[ext_resource path="res://scenes/pickup/door.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "Opened",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Opening",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.5, 37.5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Closed",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Opened",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Opening",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48.5713, 35.2 )

[node name="Button_and_Door" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Area2D" parent="."]
collision_layer = 256
__meta__ = {
"_edit_group_": true
}

[node name="ButtonSprite" type="AnimatedSprite" parent="Button"]
scale = Vector2( 2, 2 )
frames = SubResource( 16 )
animation = "Closed"

[node name="ButtonCollision" type="CollisionShape2D" parent="Button"]
position = Vector2( -1.5, -14.5 )
shape = SubResource( 1 )

[node name="Door" type="StaticBody2D" parent="."]
position = Vector2( 115, -4 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="DoorSprite" type="AnimatedSprite" parent="Door"]
position = Vector2( 80, 0 )
scale = Vector2( 2.125, 2.8125 )
frames = SubResource( 3 )
animation = "Closed"

[node name="DoorCollision" type="CollisionShape2D" parent="Door"]
position = Vector2( 83.5, -8.5 )
scale = Vector2( 0.875, 2.8125 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Button" to="." method="_on_Button_area_entered"]
[connection signal="area_exited" from="Button" to="." method="_on_Button_area_exited"]
[connection signal="animation_finished" from="Button/ButtonSprite" to="." method="_on_ButtonSprite_animation_finished"]
[connection signal="animation_finished" from="Door/DoorSprite" to="." method="_on_DoorSprite_animation_finished"]
